--- a/GISnotebook.ipynb
+++ b/GISnotebook.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "65298e2a",
    "metadata": {},
    "outputs": [
@@ -237,6 +237,8 @@
     }
    ],
    "source": [
+    "%matplotlib inline\n",
+    "\n",
     "gdf.explore()"
    ]
   },
